SERVER-12200 reset cursor timeout on getMore()